--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-﻿<h1>VLANのお勉強</h1>
+﻿<h1 id="vlan-">VLANのお勉強</h1>
+<h2>ポートVLAN</h2>
+<p>LANスイッチの物理ポートごとにVLANを設定する。</p>
+<h3>メリット</h3>
+<p>シンプルで理解しやすい。</p>
+<h3>デメリット</h3>
+<p>複数のLANスイッチに跨ってポートVLANを構築すると面倒。<br>1つの物理ポートは、1つのポートVLANにしか所属できない。
+構成の変更時は、配線の変更が必要となる。</p>
+<h2>タグVLAN</h2>
+<p>ネットワークを流れるフレームに<strong>タグ</strong>を付け、そのタグをLANスイッチが参照して適切なセグメントへと流す技術。</p>
+<h3>メリット</h3>
+<p>セグメントが跨る場合でも、LANスイッチ間の接続はケーブルは1本、ポートは1つで良い。<br>構成の変更時は、LANスイッチの構成定義情報を変更するだけで済む。</p>
+<h3>デメリット</h3>
+<p>2つのLANスイッチを結ぶポートには、2つのLANスイッチ上に構成しているVLANで送受信されるフレームが全て流れる。<br>そのため2つのLANスイッチを結ぶポートに障害が発生すると、構成しているVLANすべてに影響が出る。  </p>
+<h2>プロトコルVLAN</h2>
+<p>利用するプロトコルがIPか非IPかでVLANを識別。<br>LANスイッチに規定したプロトコル以外のフレームを受信した場合には破棄。</p>
+<h2>プライベートVLAN</h2>
+<p>同一VLAN内に所属するポート間での通信を制御。</p>
+<h2>MACアドレスVLAN</h2>
+<p>LANスイッチにスイッチが学習したMACアドレスを基に所属するVLANを決定。<br>ポート単位にVLANが固定されない。</p>
